nullaway_error_EB526C37-9683-486E-A379-6369CBFCBEC8.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-messaging/src/main/java/org/springframework/messaging/handler/invocation/AbstractMethodMessageHandler.java:681: error: [NullAway] assigning @Nullable expression to @NonNull field
			this.handlerMethod = handlerMethod;
			                   ^
    (see http://t.uber.com/nullaway )
